[fix](ABC-725): Combobox - issue with dropdown z-index

--- a/src/modules/base/primitiveCombobox/primitiveCombobox.css
+++ b/src/modules/base/primitiveCombobox/primitiveCombobox.css
@@ -36,6 +36,8 @@
 
 .avonni-primitive-combobox__dropdown {
     box-sizing: content-box;
+    position: inherit;
+    z-index: 0;
 }
 
 input.avonni-primitive-combobox__input {
